--- a/service/service_hosp/src/main/resources/application.properties
+++ b/service/service_hosp/src/main/resources/application.properties
@@ -16,6 +16,21 @@ spring.jackson.time-zone=GMT+8
 spring.data.mongodb.uri=mongodb://101.207.121.100:27017/yygh_hosp
 # nacos服务地址
 spring.cloud.nacos.discovery.server-addr=127.0.0.1:8848
+# rabbitmq地址
+spring.rabbitmq.host=101.207.121.100
+spring.rabbitmq.port=5672
+spring.rabbitmq.username=guest
+spring.rabbitmq.password=guest
+# 配置redis
+spring.redis.host=101.207.121.100
+spring.redis.port=6379
+spring.redis.database=0
+spring.redis.timeout=1800000
+spring.redis.lettuce.pool.max-active=20
+spring.redis.lettuce.pool.max-wait=-1
+#最大阻塞等待时间(负数表示没限制)
+spring.redis.lettuce.pool.max-idle=5
+spring.redis.lettuce.pool.min-idle=0
 #配置mapper xml文件的路径
 #mybatis-plus.mapper-locations=classpath:com/atguigu/yygh/mapper/xml/*.xml
 #mybatis-plus.mapper-locations=classpath:com/atguigu/yygh/mapper/xml/*.xml
