--- a/service/service_msm/src/main/resources/application.properties
+++ b/service/service_msm/src/main/resources/application.properties
@@ -21,3 +21,8 @@ spring.cloud.nacos.discovery.server-addr=127.0.0.1:8848
 aliyun.sms.regionId=default
 aliyun.sms.accessKeyId=LTAI5tJ4ANKsbqdQDgM43iEM
 aliyun.sms.secret=daJLHEStiYwOLzgNsD9nv3GJnOrrLu
+# rabbitmq地址
+spring.rabbitmq.host=101.207.121.100
+spring.rabbitmq.port=5672
+spring.rabbitmq.username=guest
+spring.rabbitmq.password=guest
