--- a/service/service_order/src/main/resources/application.properties
+++ b/service/service_order/src/main/resources/application.properties
@@ -12,6 +12,15 @@ spring.datasource.password=root
 #返回json的全局时间格式
 spring.jackson.date-format=yyyy-MM-dd HH:mm:ss
 spring.jackson.time-zone=GMT+8
+#配置mongodb
+spring.data.mongodb.uri=mongodb://101.207.121.100:27017/yygh_hosp
+# nacos服务地址
+spring.cloud.nacos.discovery.server-addr=127.0.0.1:8848
+# rabbitmq地址
+spring.rabbitmq.host=101.207.121.100
+spring.rabbitmq.port=5672
+spring.rabbitmq.username=guest
+spring.rabbitmq.password=guest
 # 配置redis
 spring.redis.host=101.207.121.100
 spring.redis.port=6379
@@ -22,12 +31,9 @@ spring.redis.lettuce.pool.max-wait=-1
 #最大阻塞等待时间(负数表示没限制)
 spring.redis.lettuce.pool.max-idle=5
 spring.redis.lettuce.pool.min-idle=0
-#配置mongodb
-spring.data.mongodb.uri=mongodb://101.207.121.100:27017/yygh_hosp
-# nacos服务地址
-spring.cloud.nacos.discovery.server-addr=127.0.0.1:8848
-# rabbitmq地址
-spring.rabbitmq.host=101.207.121.100
-spring.rabbitmq.port=5672
-spring.rabbitmq.username=guest
-spring.rabbitmq.password=guest
+#关联的公众号appid
+weixin.appid=wx74862e0dfcf69954
+#商户号
+weixin.partner=1558950191
+#商户key
+weixin.partnerkey=T6m9iK73b0kn9g5v426MKfHQH7X8rKwb
