--- a/service/service_order/src/main/resources/application.properties
+++ b/service/service_order/src/main/resources/application.properties
@@ -39,3 +39,5 @@ weixin.partner=1558950191
 weixin.partnerkey=T6m9iK73b0kn9g5v426MKfHQH7X8rKwb
 #退款证书
 weixin.cert=D:\\code\\IDEA\\yygh_parent\\service\\service_order\\src\\main\\resources\\cert\\apiclient_cert.p12
+# 扫描mapper对应的xml文件
+mybatis-plus.mapper-locations=classpath:com/atguigu/yygh/order/mapper/xml/*.xml
